--- a/school_app/fl_components/android/local.properties
+++ b/school_app/fl_components/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=C:\\Users\\HP\\Android\\SDK
-flutter.sdk=C:\\SRC\\flutter
+sdk.dir=C:\\Users\\User\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
 =======
